Bug fix for mobile navbar, aligned about and portfolio page, favicon for home page

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+.nav-link {
+  text-align:right !important;
+}
 .abs-center-x {
     position: absolute;
     left: 50%;
